fix(yourls): change scheme back to http

--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -30,7 +30,7 @@ spec:
 
     yourls:
       domain: "yourls.${SECRET_DOMAIN}"
-      scheme: https
+      scheme: http
       existingSecret: yourls-secrets
 
     ingress:
