--- a/cluster/apps/default/plex/plex-helm-release.yaml
+++ b/cluster/apps/default/plex/plex-helm-release.yaml
@@ -18,8 +18,8 @@ spec:
       interval: 5m
   values:
     image:
-      repository: ghcr.io/k8s-at-home/plex
-      tag: v1.29.2.6364-6d72b0cf6
+      repository: ghcr.io/onedr0p/plex
+      tag: 1.30.1.6562-915986d62
     env:
       TZ: "Africa/Cairo"
       # See https://www.devwithimagination.com/2019/08/21/plex-docker-and-the-problem-of-always-appearing-as-remote/
