--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -163,7 +163,7 @@
       ],
       "versioning": "loose",
       "matchPackageNames": [
-        "ghcr.io/k8s-at-home/plex",
+        "ghcr.io/onedr0p/plex",
         "syncthing/syncthing"
       ]
     },
