chore(flux): bump flux toolkit versions from v1beta2 to v1

--- a/cluster/base/flux-system-extras/helm-chart-repositories/oauth2-proxy-charts.yaml
+++ b/cluster/base/flux-system-extras/helm-chart-repositories/oauth2-proxy-charts.yaml
@@ -1,5 +1,5 @@
 # https://artifacthub.io/packages/helm/oauth2-proxy/oauth2-proxy
-apiVersion: source.toolkit.fluxcd.io/v1beta2
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: oauth2-proxy-charts
