--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -57,7 +57,9 @@ spec:
         common:
           replication_factor: 1
           storage:
-            type: "filesystem"
+            filesystem:
+              chunks_directory: /var/loki/chunks
+              rules_directory: /var/loki/rules
 
         schema_config:
           configs:
