chore(loki): fix wrong format for storage type in loki chart

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -56,10 +56,7 @@ spec:
 
         common:
           replication_factor: 1
-          storage:
-            filesystem:
-              chunks_directory: /var/loki/chunks
-              rules_directory: /var/loki/rules
+          storage: filesystem
 
         schema_config:
           configs:
