chore(loki): fix wrong format for storage type in loki chart (yet again)

--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -56,7 +56,10 @@ spec:
 
         common:
           replication_factor: 1
-          storage: filesystem
+          storage:
+            filesystem:
+              chunks_directory: /var/loki/chunks
+              rules_directory: /var/loki/rules
 
         schema_config:
           configs:
