--- a/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
+++ b/cluster/apps/default/prowlarr/prowlarr-helm-release.yaml
@@ -15,6 +15,13 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
   values:
     image:
       repository: ghcr.io/onedr0p/prowlarr-develop
