--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -28,7 +28,7 @@ spec:
     csi:
       kubeletRootDir: /var/lib/kubelet
     # Needed when using longhorn v1.4.0 to work with kubernetes <=1.24
-    enablePSP: true
+    enablePSP: false
     persistence:
       defaultClassReplicaCount: 2
     defaultSettings:
