--- a/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
@@ -74,7 +74,7 @@ spec:
           - name: Loki
             type: loki
             access: proxy
-            url: http://loki:3100
+            url: https://loki.${SECRET_DOMAIN}/loki/api/v1/push
     #          - name: Prometheus
     #            type: prometheus
     #            access: proxy
