--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -40,9 +40,9 @@ spec:
       image:
         registry: docker.io
         repository: bitnami/metallb-controller
-        tag: v0.12.1
+        tag: 0.13.9
     speaker:
       image:
         registry: docker.io
         repository: bitnami/metallb-speaker
-        tag: v0.12.1
+        tag: 0.13.9
