--- a/cluster/apps/networking/metallb/metallb-helm-release.yaml
+++ b/cluster/apps/networking/metallb/metallb-helm-release.yaml
@@ -15,34 +15,8 @@ spec:
         name: bitnami-charts
         namespace: flux-system
       interval: 5m
+  # https://github.com/bitnami/charts/blob/main/bitnami/metallb/values.yaml
   values:
-    configInline:
-      # The address-pools section lists the IP addresses that MetalLB is
-      # allowed to allocate, along with settings for how to advertise
-      # those addresses over BGP once assigned. You can have as many
-      # address pools as you want.
-      address-pools:
-        - # A name for the address pool. Services can request allocation
-          # from a specific address pool using this name, by listing this
-          # name under the 'metallb.universe.tf/address-pool' annotation.
-          name: metallb-cluster-pool
-          # Protocol can be used to select how the announcement is done.
-          # Supported values are bgp and layer2.
-          protocol: layer2
-          # A list of IP address ranges over which MetalLB has
-          # authority. You can list multiple ranges in a single pool, they
-          # will all share the same settings. Each range can be either a
-          # CIDR prefix, or an explicit start-end range of IPs.
-          addresses:
-            - 192.168.1.240-192.168.1.249
-    # Change controller image from bitnami/metallb-controller to metallb/controller (bitnami image doesn't support ARM)
-    controller:
-      image:
-        registry: docker.io
-        repository: bitnami/metallb-controller
-        tag: 0.13.9
-    speaker:
-      image:
-        registry: docker.io
-        repository: bitnami/metallb-speaker
-        tag: 0.13.9
+    installCRDs: true
+    psp:
+      create: false
