--- a/cluster/apps/default/yourls/yourls-helm-release.yaml
+++ b/cluster/apps/default/yourls/yourls-helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      # renovate: registryUrl=https://charts.yourls.org/
       chart: yourls
       version: 5.2.20
       sourceRef:
