fix(loki): fix loki url in grafana and promtail

--- a/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/grafana-helm-release.yaml
@@ -74,7 +74,7 @@ spec:
           - name: Loki
             type: loki
             access: proxy
-            url: https://loki.${SECRET_DOMAIN}/loki/api/v1/push
+            url: http://loki-gateway.monitoring.svc.cluster.local
     #          - name: Prometheus
     #            type: prometheus
     #            access: proxy
