--- a/cluster/apps/monitoring/promtail/promtail-helm-release.yaml
+++ b/cluster/apps/monitoring/promtail/promtail-helm-release.yaml
@@ -17,7 +17,7 @@ spec:
       interval: 5m
   values:
     config:
-      lokiAddress: https://loki.${SECRET_DOMAIN}/loki/api/v1/push
+      lokiAddress: http://loki-gateway.monitoring.svc.cluster.local/loki/api/v1/push
 # TODO: Look into syslog
 #      extraScrapeConfigs:
 #      - job_name: syslog
