chore(plex): add new plex claim

--- a/cluster/apps/default/plex/secrets.enc.yaml
+++ b/cluster/apps/default/plex/secrets.enc.yaml
@@ -4,32 +4,32 @@ metadata:
     name: plex-secrets
     namespace: default
 stringData:
-    PLEX_CLAIM: ENC[AES256_GCM,data:GUlfyp3tW8kRr4e+5eaTgsjjvpd0bxOyjSk=,iv:emuWrIamw7sApUUwL711YbzA+0QeUjLZYvkzB/K6Ioc=,tag:TBbgMncrnelvGrrlxB9nhg==,type:str]
+    PLEX_CLAIM: ENC[AES256_GCM,data:Y/MppoJuGBYnkuh+EdlJmmW8BDqfxviXT4w=,iv:SxgkU9bEIOW/deHUMvpXL1m0cFTfh7uP4hPU6+J13JQ=,tag:KF6K3jTtNo62zt37HqOq0g==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-08-26T12:01:52Z"
-    mac: ENC[AES256_GCM,data:BS6CMGscKiVMNOTyNVgO4GOLBGVary3+wDWWkmUPKPkdHJ0CKppfL/0vfHSEW72zIeIShOcyWjL/VUwUj3+fUf8Je9C6N+jh6Jg1YtXh/cfLUA7EYQTxZbVe83FX6YfDj0q268lkOWg7n42ONNr9pLsvKl+En7MpdgsK/rh5GrM=,iv:xzCEK+ZFLpF/Huy0tZPmN97d+w0ZJp7amkqpfP9QOA0=,tag:l5WyLUYiR9wGz6zES2vz9Q==,type:str]
+    lastmodified: "2023-08-31T18:47:09Z"
+    mac: ENC[AES256_GCM,data:+V8c3FEG2ygag2DyRmjuxQ95tniq1EhlHJfqJsX8+MZI0Wq2MyGUZcbqXW9vghsxRhJ8RmC0tHZWdorO9zXwuBnbQW2H50V6SHLGSByKt+HFgi3KoIpahIW+bqx5kWkCNVrOgySPnFOzz8onCy2yCB68ul0m+Kx0kt7dEu+5Dc0=,iv:AehmuImUT8Tvy3qT0fn5qtXfYp78DRWA/iBJ0qzpbl0=,tag:HCbKgICJS26T9ckdU4hIIw==,type:str]
     pgp:
-        - created_at: "2022-08-26T12:01:51Z"
+        - created_at: "2023-08-31T18:47:08Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/RULByjzLbq2Dhv4KfAtqfL8j3e3LeXDNPhThMgyG0wlf
-            BPgtk4NIhUG2vctUMgyYeiBZ9mKqpqUlgTFpwzR/wqQB3OsNYRyesmld7ktWP9L3
-            DT2KAf5g5V+nScZskvG0vF0IqsLAjNJwo/1AP8wQ4bSle8iY/4QFGccbbaKAMP2x
-            jp+52kDsKiiSg5vNrzJfK7odNasG6Q0yst9AdP/6hZFQSSg/I5z9KIthncSVzEa4
-            IaWtQMWQ8ZqPbDAn0Qo2Kjp+mV9Cfl6z5kpzOoiQa7kp6YrEkaTGkzwfW7JY1OWi
-            TO1xYk14JCCwWsHZgW3rrKIUjaEWetOwWgS4o8K3cIvjIqISyP36w19pIeFXbzsL
-            tLJGIJ+qXIX2lTCBsgJ4yOvsoG6T8+zWtispEZGEVm2ZeNxhrK1g2LdvNeTjJoQh
-            djCxp3+i52m+mXymyd8y8YXcZANbhkJI5cxmc0lLSNDkvaQ5qGT3JNEx8TcM2Po8
-            Fax8eB8uaDFIdiTfI7I50l4Bqk9Z/cByvdqDXQ7TsBHT6zmKO8v5okUwMMNW0Srl
-            QQkrfap7jImb78o/Apfr8G/9Dcp9Ub+AGCSxTKQQxUvhZMXuQp/0EFpFvbc0hNXk
-            AmDCYsDyu7udFWRBAK4Y
-            =gYml
+            hQGMA71EESEn7N2iAQv/fsgg+5MP88UCZWFJvYWrqrV1+ZVXVAHNBPogFGUEQbUW
+            nwG77qwFnBTFfqujAvf/ph7qv77tJreKF1HXQXhXeJS1E9tCfkJuQhxZVL3sDQ2Z
+            l6lU+vQAsvM9eFrHraYZwJkUKVnIBzyIkcbUVcUh2iGunE05782DzAA3LBXydYAM
+            YeDkwqaRZ92/Ffc/F2MGymNMguhFXvtIkhrdIyPt48zLReczdZnFo7jJfvES669Y
+            HyyH5Ee15V+aIHac3SiyfSeRWcTsfhLEkRbH5s48we4uDT1LfABQwsYPoXXKynom
+            NvqF4nQSLYQ/TJHHFs7acMKzU2CBlZGwDsE0RghK14voOB515IKsaQGX8QvkG4tK
+            Czl9D79B3dkbhFljFCPEw1no8hOdXdGjX1X4N6GQ6s130w9L07aGj4R5tGXWAX2K
+            YPbKqfcP8ojYjt5ot6TH/jCAZ+4pJn0XIFLl/w7orOIIQtFPBpVoFj80mKCs51dZ
+            xdFYDwPoms4duJR9Jxwc0lwBdVYtZSQgFnu/7T/FSmiJsgG6URl/CXkjHxE7ylDH
+            hc8S+GonfOcNrk4LTcoaAyBzl00hROZzCeKzGuip8K+H0sck3Vfd2Z4mkuOgq54K
+            Jw0JLbrEHv+ngq8ZPg==
+            =hAkh
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
