fix(postgresql): fix postgresql not creating a custom user on creation

--- a/cluster/apps/mb-scheduler/postgresql/postgresql-helm-release.yaml
+++ b/cluster/apps/mb-scheduler/postgresql/postgresql-helm-release.yaml
@@ -23,9 +23,8 @@ spec:
       tag: 15.4.0-debian-11-r39
     auth:
       enablePostgresUser: false
+      username: mb-scheduler
       existingSecret: postgresql-secrets
-    containerPorts:
-      postgresql: 5432
     primary:
       name: mb-scheduler
       persistence:
