fix(postgresql): adjustments to database name created by postgresql helm chart

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,34 +4,34 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:L8Fxt+4kabHPcXbdbnEbOzp5CGm8KcgtoX3SE39mNBHL1OlYdY9UPnvKs79IcQ1QC080MOmdF98voO+7TcOBO/2dV9XL5sVdIjMVmrDrwAKRQEtOmVHgE69o0ftlYmn0/u2gURwMrkMEdZXRjoTMzJU8OQ==,iv:YU8mcn16UZh1jAGO/YGUGXT+hJERm0tZ0EljbJK3rzs=,tag:pKuuZyKebNXkZn+zd+D7QA==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:5s4epv83T5t/HheoMbBTMua5t/0=,iv:YTJrElwQqOzWNjILvAkqc0muDGIQS9akCSYdQRf+Tko=,tag:kH2jogfq1EutA43bTF3P4w==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:Fu2IeKMEVlk6Cm+PGTCHxH6oyPQ=,iv:boTNjzvrer2O+pmiUsq41Zm9DA3etDyq6y7mazJI4f4=,tag:vKNwtlOye0WfqTtMc4RKTA==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:v2Lq5sNRNGz4BFBsLV0Ufs3n5Sr4lMss728LdrphYfBGYAoGsNVtF/YxNA5CeKc/U5rFZ/AJUbXrTo5JmGJpMIH76z0G3kdtAd5ofP8vF4p1I78IzckyyHDbTbWnDItnTmbmpTmKbtxlgJ2HGVT9,iv:+Fee5R3qtMK0XaiGT+H5z6AEn7wM6wS5y+K/6Pnv4vY=,tag:fWBl26FUaOGTzyeYBN5NxQ==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:DCqmbiHNyPMiZ+IDbM891NVw0fI=,iv:L6BouhhRTPt6lwRBvML66+jwDlraD9YvipK+WU1+tbo=,tag:o4iFyCettYgtv5B4D9rdWQ==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:c9CkP6JnKdRpUAs9k26cUPmRtwU=,iv:7cfZB3N/ex+oA/1gLxiy0+oFF1DKjRlqzfXm0ASn0f8=,tag:DxN6RRkWISgZqWi9gliaNA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-21T20:32:52Z"
-    mac: ENC[AES256_GCM,data:dKstaNsU5cBZJqm4nHL0L2ETNkldve+eHt61LlEC2lgev7vGu8TFAtnT1Ulpln9gizwceQe2fiDns/eywLxSaruE+RxpWZf6V8Qv8z0OfXJZylrq0p2agc6JrTaWgU+OESdxN79/lPPQC3EDXqIUs3NFJOMNqKKVsMQigm9chA0=,iv:VV1xQdqGkODDKk/KDuajUpT3KxctXl9YH55wgZTNDlM=,tag:7aP3l1BelM343Qh61MZBvA==,type:str]
+    lastmodified: "2023-09-21T21:05:54Z"
+    mac: ENC[AES256_GCM,data:/4xao8i9CbjkmCkzmEgWSn23E2DDlH8AaPUK2ioE+YrUN3qPq8lcIAs7aQ2de71RqHk8SEubQDa70VjRl/CxhK8LGSdj2z8JNnTNkfVirNYZlsbNJuPYurLr5fx6nplsQ89mKwUTnwzs+r0GjG+9nEj/ALx11VkRJG8AA/S/TRQ=,iv:Esn2GXTbCR4cUGr3ESxJ8hg64hk50CspvoIOqQUf5eY=,tag:8uPGnmR30jq+g9YsHQdDXA==,type:str]
     pgp:
-        - created_at: "2023-09-21T20:32:52Z"
+        - created_at: "2023-09-21T21:05:54Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv/XPXFw9hliDvxo94amu1zY/ZAx/A3mBtwyA4IDVQH78KU
-            IT3IAyaQ2fCBC/cIB+05PNgDY08NF3igtyqTQ4vU4rO+LDtl5hB/I5QdxeEsgEsU
-            3T/tNGeJP46Yj+yxTQ/sFknuJSgbw99zrFIrfFdHk/HQr21AJV4ODXzGN63OiZ1S
-            r3IwdWQ0xbIHanWBO/eSsTTqpDf+7OYRQcgIfLwFgtrS+n2zuzYPSiDxapJ9SNgl
-            0K7eNAT+FE/XWEB3kJZw1rmXsPpwY6Fb0cG+1Xx1m87cjm4Y5e8nrPqVMqxjn01x
-            x+e2Sk4whIM+307JUt0qPaWZR7wCEvJynzr4NNLjUJGcVeOfMdoh6T/TiItj/XnM
-            ejSKW1K5HgHcOS/Gjnwc7/LFeYeCFT7Dbt0N/qgL/+yjtGBRmBwoLNsMz3Bh4t94
-            fntNRn77GWj9Hir43qzVRMH+RCJxmB3c0ce2Ra9UUIm02sLIrn8HqPZkhSQoENtH
-            YYFLwu5f8A8QqiAJiEYr0lwBB0VfoTWuyDtZvK1IWbq/fespREtOK/aDw2sgZF2k
-            nt9KbftgbbXyTUYHsn1BflZ2LfYE+eSK10kRuSoMo9TWgGe8nnP1Oprcnl59aKhk
-            C7YcNx4HtlA95XPo4Q==
-            =VzrP
+            hQGMA71EESEn7N2iAQv9Gn7hjD/dUlbQuKbKidhCJg0X6ETICuV7dni9RZZQIJqB
+            dA92Z8IK0hvNmyyVryEssYTKiHF8D+5sqjlRC/wzciEDMHol31d74ocU9xE6xneG
+            O/kdG+WyDXnnFva80JpWbhr60B2qGlok51A3mdxB+TYIjQcABhLcWKPJnaBY5MWd
+            vnVXaORJ/3o2bWSyhptey+AZY5n+e5UaWoaNi2NmLs29gLSWCtT3n/bCAb/gKbxA
+            vDAsYOHS9OGDkkcOBvFH+J4WI71RdqkpheHc6QhwFBeJObJjeIq8ZkYo0SOz0jVD
+            XhacwPe8pGufQbQ7ml+O4B4QprNxGvFj4OiUl23c2e/b0OS9hb2kg6dFheoBqiEq
+            t1BOxticuy6pMRkzlqlQKI5zSAOeDzPpkr85Hpe9URY/Fex+yBUeVUXAFtfERzTX
+            kc2bPLs93Ur/HRD8xOknxn/bmdUTgJ1mVFL/h2RIxxVyxqj3q5g3vc0QKYqIzV3O
+            cUigZJng8AtyH6ad1Lr40lwBZlJYXAbxruEjb8EDzlg4wpgBxQOCpTVzO1iA8S0Z
+            7GzSfXpelFotykqqRm/ovyAW3IhZjonq5EHITxUZPiwXExc4xhIQ4EO50GfKIUCb
+            gBUsw9BPdkRqpPwRWw==
+            =QJxj
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
