fix(mb-scheduler): fix type in database url

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/secrets.enc.yaml
@@ -4,34 +4,34 @@ metadata:
     name: mb-scheduler-backend-secrets
     namespace: mb-scheduler
 stringData:
-    DATABASE_URL: ENC[AES256_GCM,data:v2Lq5sNRNGz4BFBsLV0Ufs3n5Sr4lMss728LdrphYfBGYAoGsNVtF/YxNA5CeKc/U5rFZ/AJUbXrTo5JmGJpMIH76z0G3kdtAd5ofP8vF4p1I78IzckyyHDbTbWnDItnTmbmpTmKbtxlgJ2HGVT9,iv:+Fee5R3qtMK0XaiGT+H5z6AEn7wM6wS5y+K/6Pnv4vY=,tag:fWBl26FUaOGTzyeYBN5NxQ==,type:str]
-    MB_USERNAME: ENC[AES256_GCM,data:DCqmbiHNyPMiZ+IDbM891NVw0fI=,iv:L6BouhhRTPt6lwRBvML66+jwDlraD9YvipK+WU1+tbo=,tag:o4iFyCettYgtv5B4D9rdWQ==,type:str]
-    MB_PASSWORD: ENC[AES256_GCM,data:c9CkP6JnKdRpUAs9k26cUPmRtwU=,iv:7cfZB3N/ex+oA/1gLxiy0+oFF1DKjRlqzfXm0ASn0f8=,tag:DxN6RRkWISgZqWi9gliaNA==,type:str]
+    DATABASE_URL: ENC[AES256_GCM,data:c3V1JcLWXHkgNAlkUqWQ+M8YgTiA6eUqOOO0V2B9M2ar4qCi9E2pB4y+C5vBpOnxIfk0BpZfxlQQGmHI+xbiFOTZ8voMeCGmJArYihTpyXOK61GIy1dm/2iwFSpg5Hrr0sgWnSiEZXfuHaElxPyiWg==,iv:BkOXJSSyb9195pqCKQzitxpuFYKoxMMFI11eUo88+Ys=,tag:fFuAJdilbC71yi/Metk4ug==,type:str]
+    MB_USERNAME: ENC[AES256_GCM,data:z+/t5pduH7XcAXUVjE3PayADoes=,iv:bmK/nhw/32UilIJ2js9FXA2sRQ9d+Z+2XdYl235e5d8=,tag:tkqdHSVO7FHXUCXIbIbWzg==,type:str]
+    MB_PASSWORD: ENC[AES256_GCM,data:7nBDhRHHye26xutPQxfBiSquyVY=,iv:50/3lEcOWnhUfVbqPZAQ+FSE700z8S5GxqxZ4wruoIc=,tag:K7aQP3EE7OQU+T5U3MxJiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2023-09-21T21:05:54Z"
-    mac: ENC[AES256_GCM,data:/4xao8i9CbjkmCkzmEgWSn23E2DDlH8AaPUK2ioE+YrUN3qPq8lcIAs7aQ2de71RqHk8SEubQDa70VjRl/CxhK8LGSdj2z8JNnTNkfVirNYZlsbNJuPYurLr5fx6nplsQ89mKwUTnwzs+r0GjG+9nEj/ALx11VkRJG8AA/S/TRQ=,iv:Esn2GXTbCR4cUGr3ESxJ8hg64hk50CspvoIOqQUf5eY=,tag:8uPGnmR30jq+g9YsHQdDXA==,type:str]
+    lastmodified: "2023-09-21T21:10:54Z"
+    mac: ENC[AES256_GCM,data:tGBdUzc1GQcyT+c2f937sjxSdD1x38yx0DckUBEutWSjW2HSSOeeXSvEiji0OBfufi4SVYyYLpGZH8T9xdbauwozSAyyTC7aknr2jDmcRSL6Hv+ylUTk058qoK5STBkUugooZOQeozCWA+fEYAG5lIgRBXkO2M4DneWrEimzp74=,iv:QHLaUhe0e9AG7JAt5Wp+jBwubLyq3jNXx2SeLU0rplg=,tag:m/OFU0DShChWhoWMM5anOw==,type:str]
     pgp:
-        - created_at: "2023-09-21T21:05:54Z"
+        - created_at: "2023-09-21T21:10:54Z"
           enc: |-
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9Gn7hjD/dUlbQuKbKidhCJg0X6ETICuV7dni9RZZQIJqB
-            dA92Z8IK0hvNmyyVryEssYTKiHF8D+5sqjlRC/wzciEDMHol31d74ocU9xE6xneG
-            O/kdG+WyDXnnFva80JpWbhr60B2qGlok51A3mdxB+TYIjQcABhLcWKPJnaBY5MWd
-            vnVXaORJ/3o2bWSyhptey+AZY5n+e5UaWoaNi2NmLs29gLSWCtT3n/bCAb/gKbxA
-            vDAsYOHS9OGDkkcOBvFH+J4WI71RdqkpheHc6QhwFBeJObJjeIq8ZkYo0SOz0jVD
-            XhacwPe8pGufQbQ7ml+O4B4QprNxGvFj4OiUl23c2e/b0OS9hb2kg6dFheoBqiEq
-            t1BOxticuy6pMRkzlqlQKI5zSAOeDzPpkr85Hpe9URY/Fex+yBUeVUXAFtfERzTX
-            kc2bPLs93Ur/HRD8xOknxn/bmdUTgJ1mVFL/h2RIxxVyxqj3q5g3vc0QKYqIzV3O
-            cUigZJng8AtyH6ad1Lr40lwBZlJYXAbxruEjb8EDzlg4wpgBxQOCpTVzO1iA8S0Z
-            7GzSfXpelFotykqqRm/ovyAW3IhZjonq5EHITxUZPiwXExc4xhIQ4EO50GfKIUCb
-            gBUsw9BPdkRqpPwRWw==
-            =QJxj
+            hQGMA71EESEn7N2iAQv/cGiQBu1sVo/YQCLqVGQ5lyQBOsbO+0of7nCKrBHc0U31
+            wnN5k5m66x7CZlOFA4Uhq0gUDHCs6Cv6vlnIQMiF8ftFkaXN/hjjKppu6bUCvYiD
+            HyHSDYcNF4elDHaEUFRx8Tceqmv33VoDGi0hhTC37Fq4qg8vItzEZYiqQcD+WaVA
+            KZ+LmOO18uK6yMR/zmnUK+Y1STsXQmNgvDG9HWEthgjRjvdk3PJj2Rwk0+2F8+9c
+            uFselOCOO6xefpU6vqNJ1v5VCYX5CBJG0ryYTHbbNiBU9YNkijOGy1A+r5Tr7l4c
+            CR+ikF2ooeaKfVT6PTOe88POK/tpNy7ToW63kXWepMx6rWAGAsZml7yQI2duIInr
+            /YxX/VvWaqkHFS2lAoCZfm1LyXTy/t0xe3TzeiYivi5R3jHdyd0NfPfHTY2dmvzq
+            a5nKjlthliozAgOXgkV1IB+QuzTYVoyraZ/ZBiQWxtvaj0Tnnrmr7E70JEg64SW0
+            5Y5HqXb1tD6h7zZxK16r0l4BPoI1irkNamttMfHhfGmBsOj/WP9l/47430INqac6
+            vGHu8B0bbAJ2c+twwjWtOvxxtwVVug/Hz3ip8ycnU+NqR2FU8Xg5b5CuHX8bfdTV
+            s06sNRiZ06zMOMBtV+iU
+            =xN4M
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
