fix(mb-scheduler): yet another attempt at making nginx work

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -45,8 +45,8 @@ spec:
             - name: static-folder
               mountPath: /static/
             - name: nginx-config
-              mountPath: /etc/nginx/nginx.conf
-              subPath: nginx.conf
+              mountPath: etc/nginx/sites-available/default
+              subPath: default
 
       imagePullSecrets:
         - name: ghcr-login-secret
