wip(mb-scheduler): temporary adjustment to check where nginx stores its configs

--- a/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
+++ b/cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
@@ -45,7 +45,7 @@ spec:
             - name: static-folder
               mountPath: /static/
             - name: nginx-config
-              mountPath: etc/nginx/sites-available/default
+              mountPath: etc/nginx/test
               subPath: default
 
       imagePullSecrets:
